k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-app
  namespace: chaos-lab
  labels:
    app.kubernetes.io/name: chaos-app
    app.kubernetes.io/instance: chaos-app
    app.kubernetes.io/part-of: aks-chaos-lab
    app.kubernetes.io/component: api
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: "0.1.0"
spec:
  selector:
    app: chaos-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
